# wrappedMonero

./: .editorconfig  .env.example  .gitignore  .gitmodules  DEMO.md  DEPLOYMENT_COMPLETE.md  FULL_FUNCTIONALITY_GATE.md  Makefile  PRODUCTION_SETUP.md  README.md  REDEPLOY_CONTRACT.md  SETUP.md  decentralize.md  demo.py  deploy_production.sh  dkg_demo.py  dkg_summary.md  dkg_tool.py  docker-compose.yml  full_bridge_demo.py  mint_burn_report.md  mint_complete.sh  specification.md  test_bridge_flow.py  test_dkg.py  test_full_flow.py  test_validator_live.py
bridge/: .env.template  README.md  abi.json  lib.py  main.py  notes.md  pyproject.toml  request_mint.py  validator_client.py  validator_urls.json
contract/: .env.example  burn_command.txt  burn_operation.js  burn_script.py  hardhat.config.js  interact.js  mint_operation.js  package-lock.json  package.json  wxMR.sol
contract/artifacts/@openzeppelin/contracts/token/ERC20/IERC20.sol/: IERC20.dbg.json
contract/artifacts/@openzeppelin/contracts/token/ERC20/extensions/IERC20Metadata.sol/: IERC20Metadata.dbg.json
contract/artifacts/@openzeppelin/contracts/utils/Context.sol/: Context.dbg.json
contract/artifacts/contracts/wxMR.sol/: IRiscZeroVerifier.dbg.json  IRiscZeroVerifier.json  WxMR.json
contract/cache/: solidity-files-cache.json
contract/contracts/: wxMR.sol
contract/scripts/: deploy.js
contracts/: wXmr.sol  wXmrBridge.sol
fhe-engine/: Cargo.toml  Dockerfile
fhe-engine/src/: main.rs
frontend/: .gitignore  README.md  abi.json  app.js  index.html  package-lock.json  package.json  styles.css  svelte.config.js  vite.config.js
frontend/src/: app.css  app.js
frontend/src/components/: uiController.js
frontend/src/config/: abi.js  constants.js
frontend/src/routes/: +page.svelte
frontend/src/services/: contractService.js  walletService.js
frontend/src/styles/: base.css  components.css  layout.css  main.css  messages.css  responsive.css  tabs.css  variables.css  wallet.css
frontend/src/utils/: uiHelpers.js  validation.js
frontend/static/: abi.json
guest/: Cargo.toml  build.rs
guest/src/: main.rs
relay/: .env.example  Cargo.toml  Dockerfile
relay/src/: contract.rs  fhe_policy.rs  main.rs  monero.rs  prover.rs
tests/: __init__.py  test_zkvm.py
validator/: .gitignore  AddTransactionCapabilitySpec.md  Cargo.toml  Dockerfile  SETUP.md  check_status.sh  config.toml  create_unified_bridge.sh  demonstrate_tss_signing.sh  env.py  requirements.txt  run_validators.sh  start_dkg_ceremony.sh  submit_tss_confirm_mint.py
validator/configs/: validator0.toml  validator1.toml  validator2.toml  validator3.toml  validator4.toml  validator5.toml  validator6.toml
validator/keys/validator_1/: dkg_keys_1757875757.json  dkg_keys_1757875764.json  dkg_keys_1757875805.json  mnemonic_1.txt
validator/keys/validator_2/: dkg_keys_1757875805.json  mnemonic_2.txt
validator/keys/validator_3/: dkg_keys_1757875805.json  dkg_keys_1757876216.json  mnemonic_3.txt  summary_3.txt
validator/keys/validator_4/: dkg_keys_1757875805.json  mnemonic_4.txt
validator/keys/validator_5/: dkg_keys_1757875805.json  mnemonic_5.txt
validator/src/: combiner.rs  config.rs  keygen.rs  main.rs  network.rs  signing.rs  simple_validator.rs  tss.rs  validation.rs  validator.rs
wallet/: package-lock.json  package.json  tsconfig.json
wallet/src/: bridge.ts  cli.ts  fhe.ts  keys.ts  lattice-sig.ts  wallet.ts
webui/: index.html
