[package]
name = "fhe-policy-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tfhe = { version = "0.4", features = ["x86_64-unix"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
dotenv = "0.15"
clap = { version = "4.0", features = ["derive"] }
bincode = "1.3"