[package]
name = "risc0-xmr-guest"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "0.20", default-features = false, features = ["std"] }
sha2 = { version = "0.10", default-features = false, features = ["compress"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
num-bigint = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }

[[bin]]
name = "risc0-xmr-guest"
path = "src/main.rs"