[package]
name = "risc0-xmr-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
risc0-zkvm = { version = "0.20", features = ["prove"] }
risc0-zkp = "0.20"
risc0-build = "0.20"
ethers = { version = "2.0", features = ["rustls"] }
dotenv = "0.15"
uuid = { version = "1.0", features = ["v4"] }
reqwest = { version = "0.11", features = ["json"] }
bincode = "1.3"
clap = { version = "4.0", features = ["derive"] }
hex = "0.4"