[package]
name = "validator-tss"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "simple_validator"
path = "src/simple_validator.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
axum = "0.7"
tower = "0.4"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# DKG and cryptographic dependencies
secp256k1 = { version = "0.28", features = ["serde", "global-context", "rand"] }
ed25519-dalek = { version = "2.0", features = ["serde"] }
hex = "0.4"
rand = "0.8"
sha2 = "0.10"
url = "2.4"
bs58 = "0.5"